--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,10 +49,15 @@ android {
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.8.0'
+    implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation platform('org.jetbrains.kotlin:kotlin-bom:1.8.0')
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.5.1'
     implementation platform('androidx.compose:compose-bom:2022.10.00')
+    implementation 'androidx.compose.runtime:runtime:1.1.0'
+    implementation 'androidx.compose.runtime:runtime-livedata:1.1.0'
+    implementation 'androidx.compose.compiler:compiler:1.1.0'
+    implementation 'org.jetbrains.kotlin:kotlin-reflect:1.5.30'
     implementation 'androidx.compose.ui:ui'
     implementation 'androidx.compose.ui:ui-graphics'
     implementation 'androidx.compose.ui:ui-tooling-preview'
